// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBlock match snapshot PageTitle simple 1`] = `
<div>
  <div
    class="css-1vv96bp"
  >
    Hello World
  </div>
  <div
    class="css-u37yxj"
  >
    <div
      class="css-3muqs4"
    >
      Hello
    </div>
  </div>
</div>
`;

exports[`TitleBlock match snapshot PageTitle with Composant on Children 1`] = `
<div>
  <div
    class="css-1vv96bp"
  >
    Hello World
  </div>
  <div
    class="css-u37yxj"
  >
    <div
      class="css-3muqs4"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-13u4ebv-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Hello world
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
